добавлен генератор тестовых данных для контактов, небольшой рефакторинг